--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@line/liff": "^2.23.0",
     "vue": "^3.3.11"
   },
   "devDependencies": {
